--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     *{box-sizing:border-box;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
     body{
   margin:0;
-  background: url('c:\Users\mendo\Downloads\WhatsApp Image 2025-11-06 at 4.28.25 PM.jpeg') no-repeat center center fixed;
+  background: url('WhatsApp Image 2025-11-06 at 4.28.25 PM.jpeg') no-repeat center center fixed;
   background-size: cover;
   color:#0f1724;
   padding:20px;
@@ -349,3 +349,4 @@
   </script>
 </body>
 </html>
+
